Introduce http status code domain for loading info

Fix inconsistency in reporting load info error category for http status
codes, which across versions was reported either as internal error
category or just no error domain. Add new separate domain for http
status codes.

[ChangeLog][QWebEngineLoadingInfo] Added HttpStatusCodeDomain for http status
code range of errors

Fixes: QTBUG-94963
Change-Id: I9fd496248c6fa33c424d758e9a0be99758aaf061
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Benjamin Terrier <b.terrier@gmail.com>
Reviewed-by: Michal Klocek <michal.klocek@qt.io>