src/core/api/qwebengineloadinginfo.h
@@ -79,7 +79,8 @@ public:
          CertificateErrorDomain,
          HttpErrorDomain,
          FtpErrorDomain,
-         DnsErrorDomain
+         DnsErrorDomain,
+         HttpStatusCodeDomain
     };
     Q_ENUM(ErrorDomain)
 
